# job_orchestrator_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  status.py
app/api/: router.py
app/api/endpoints/: agent.py  datasets.py  jobs.py  ops.py
app/controllers/: agent_controller.py  dataset_controller.py  job_controller.py  ops_controller.py
app/models/: agent.py  job.py
app/services/: dataset_service.py  email_notification_service.py  job_service.py
app/utils/: citylearn_dataset.py  file_utils.py  job_utils.py
docs/: jobs.md  releases.md  worker_agent.md
docs/pt/: releases.md
postman/: OPEVA Job Orchestrator.postman_collection.json
tests/: test_api_datasets.py  test_api_jobs.py  test_citylearn_dataset.py  test_dataset_service_controllers.py  test_datasets.py  test_email_notifications.py  test_health_and_routes.py  test_job_lifecycle.py  test_job_states.py
