[project]
name = "job-orchestrator-agent"
version = "1.0.0"
description = "OPEVA job orchestration API for worker-dispatched simulation jobs"
authors = [
    {name = "OPEVA Team"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "httpx>=0.27",
    "pydantic==2.11.3",
    "pydantic-settings==2.2.1",
    "PyYAML==6.0.2",
    "pymongo",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "pika>=1.3,<2",
    "pyarrow>=18,<23",
    "python-multipart",
    "uvicorn",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
